<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="2"
    app:rowCount="2"
    tools:context=".MainActivity">

    <!-- Portal Berita -->
    <FrameLayout
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:background="#4CAF50"
        android:onClick="webviewportal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/portal"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_outline_home_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/portal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_portal_berita"
                android:textColor="#292929"
                android:textSize="18sp" />
        </RelativeLayout>
    </FrameLayout>

    <!-- Open Data -->
    <FrameLayout
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:background="#FDD835"
        android:onClick="webviewopendata">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/opendata"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_lock_open_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/opendata"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_open_data"
                android:textColor="#292929"
                android:textSize="18sp" />
        </RelativeLayout>
    </FrameLayout>

    <!-- Portal PPID -->
    <FrameLayout
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:background="#FFEBEE"
        android:onClick="webviewppid">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ppid"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_outline_menu_book_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ppid"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_portal_ppid"
                android:textColor="#292929"
                android:textSize="18sp" />
        </RelativeLayout>
    </FrameLayout>

    <!-- Layanan Informasi Publik -->
    <FrameLayout
        android:background="#FF5722"
        android:onClick="activityLayananInformasi"
        app:layout_columnWeight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_rowWeight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/layanan_informasi"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_outline_room_service_24_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layanan_informasi"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_layanan_informasi"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </RelativeLayout>
    </FrameLayout>

    <!-- Statistik data Pelatihan dan Peserta -->
    <FrameLayout
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:background="#673AB7"
        android:onClick="activityInfoStatistik"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/statistik"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_show_chart_24_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statistik"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_statistik"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </RelativeLayout>
    </FrameLayout>

    <!-- Agenda Kegiatan Pelatihan maupun non Pelatihan -->
    <FrameLayout
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:background="#4FC3F7"
        android:onClick="webviewagenda">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/agenda"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_outline_date_range_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/agenda"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_agenda_kegiatan"
                android:textColor="#292929"
                android:textSize="18sp" />
        </RelativeLayout>
    </FrameLayout>

</androidx.gridlayout.widget.GridLayout>
